--- a/src/app/Components/header/header.module.css
+++ b/src/app/Components/header/header.module.css
@@ -35,6 +35,11 @@
     align-items: center;
     justify-content: space-between;
     flex: 1;
+    margin-left: 30px;
+}
+
+.logo {
+    margin-left: 20px;
 }
 
 .buttonWrapper {
