--- a/src/app/Components/header/header.module.css
+++ b/src/app/Components/header/header.module.css
@@ -40,6 +40,7 @@
 
 .logo {
     margin-left: 20px;
+    cursor: pointer;
 }
 
 .buttonWrapper {
@@ -50,5 +51,10 @@
     color: white;
     font-weight: 600;
     font-size: 13px;
-    padding: 0 30px;
+    padding: 15px 30px;
+    cursor: pointer;
+}
+
+.href:hover {
+    color: #b68a5c;
 }
