--- a/src/app/Components/bottom/bottom.module.css
+++ b/src/app/Components/bottom/bottom.module.css
@@ -18,6 +18,7 @@
 
     display: flex;
     align-items: flex-start;
+    gap: 45px;
     justify-content: space-between;
 
     font-size: 20px;
@@ -74,4 +75,22 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+@media screen and (max-width: 915px) {
+    .section {
+        width: 100vw;
+        height: 1100px;
+        background-color: #26385f;
+        display: flex;
+        justify-content: center;
+    }
+
+    .ul {
+        margin-left: 20px;
+    }
+
+    .sectionWrapper {
+        flex-direction: column;
+    }
 }
