--- a/src/app/Components/header/header.module.css
+++ b/src/app/Components/header/header.module.css
@@ -58,3 +58,41 @@
 .href:hover {
     color: #b68a5c;
 }
+
+.Mobile {
+    display: none;
+}
+
+
+@media screen and (max-width: 915px) {
+    .Pc {
+        display: none;
+    }
+
+    .Mobile {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .mobWrapper {
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .logo {
+        margin-left: -15px;
+    }
+
+    .button {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
