--- a/src/app/Components/service/service.module.css
+++ b/src/app/Components/service/service.module.css
@@ -19,7 +19,6 @@
 }
 
 .flex {
-    flex: 1;
     height: 70px;
     border-radius: 5px;
     margin: 15px 0;
@@ -50,4 +49,22 @@
     border: 2px solid #bfbfbf;
     font-size: 18px;
     color: #5a5a5a;
+}
+
+@media screen and (min-width: 915px) {
+    .flex {
+        flex: 1;
+    }
+}
+
+
+@media screen and (max-width: 915px) {
+    .wrapper {
+        width: 100%;
+    }
+
+    .flex {
+        width: 100%;
+        height: 70px;
+    }
 }
