added links + design fixes

--- a/src/app/Components/firstSection/firstSection.module.css
+++ b/src/app/Components/firstSection/firstSection.module.css
@@ -83,6 +83,7 @@
 
 .mobile {
     display: none;
+    background-color: #26385f;
 }
 
 
@@ -96,6 +97,7 @@
     }
 
     .image {
+        background-color: #26385f;
         display: none;
         width: 100vw;
     }
