--- a/src/app/Components/links/links.module.css
+++ b/src/app/Components/links/links.module.css
@@ -5,13 +5,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 50px 0;
     background-color: white;
 }
 
 .headerText {
     display: inline;
     font-size: 25px;
+    text-align: center;
 }
 
 .wrapper {
